chore: Update static assets, expand `.gitignore` with common development artifacts, and refactor note title display in `index.html`.

--- a/static/index.html
+++ b/static/index.html
@@ -341,13 +341,11 @@
                                             class="flex-1 bg-white dark:bg-[#2E3440] border border-blue-400 rounded px-1 text-sm outline-none w-full shadow-sm text-inherit">
 
                                         <!-- Normal Title -->
-                                        <div v-else class="flex-1 min-w-0 flex items-center gap-2"
-                                            @dblclick.stop="startRename(note, 'note')">
-                                            <span class="truncate select-none leading-tight"
-                                                :class="selectedNote && selectedNote.id === note.id ? 'font-bold' : ''">
-                                                {{ note.title || 'Untitled' }}
-                                            </span>
-                                        </div>
+                                        <span v-else class="flex-1 min-w-0 truncate select-none leading-tight"
+                                            @dblclick.stop="startRename(note, 'note')"
+                                            :class="selectedNote && selectedNote.id === note.id ? 'font-bold' : ''">
+                                            {{ note.title || 'Untitled' }}
+                                        </span>
                                     </div>
 
                                     <!-- Hover Actions -->
@@ -466,13 +464,11 @@
                                                 class="flex-1 bg-white dark:bg-[#2E3440] border border-blue-400 rounded px-1 text-sm outline-none w-full shadow-sm text-inherit">
 
                                             <!-- Normal Title -->
-                                            <div v-else class="flex-1 min-w-0 flex items-center gap-2"
-                                                @dblclick.stop="startRename(note, 'note')">
-                                                <span class="truncate select-none leading-tight"
-                                                    :class="selectedNote && selectedNote.id === note.id ? 'font-bold' : ''">
-                                                    {{ note.title || 'Untitled' }}
-                                                </span>
-                                            </div>
+                                            <span v-else class="flex-1 min-w-0 truncate select-none leading-tight"
+                                                @dblclick.stop="startRename(note, 'note')"
+                                                :class="selectedNote && selectedNote.id === note.id ? 'font-bold' : ''">
+                                                {{ note.title || 'Untitled' }}
+                                            </span>
                                         </div>
 
                                         <!-- Hover Actions -->
