feat: Add rename buttons for notes and folders, and increase login modal z-index.

--- a/static/index.html
+++ b/static/index.html
@@ -96,7 +96,7 @@
         </div>
         <!-- Login Modal -->
         <div v-if="!isAuthenticated"
-            class="fixed inset-0 bg-black bg-opacity-50 z-50 flex items-center justify-center backdrop-blur-sm">
+            class="fixed inset-0 bg-black bg-opacity-50 z-[100] flex items-center justify-center backdrop-blur-sm">
             <div
                 class="bg-white dark:bg-slate-800 p-8 rounded-2xl shadow-2xl w-96 text-center transform transition-all scale-100 dark:text-white">
                 <div class="mb-6">
@@ -348,9 +348,16 @@
                                         </span>
                                     </div>
 
+
                                     <!-- Hover Actions -->
                                     <div
                                         class="flex items-center opacity-0 group-hover:opacity-100 transition-opacity ml-2">
+                                        <button @click.stop="startRename(note, 'note')"
+                                            class="p-0.5 hover:bg-slate-200 dark:hover:bg-slate-600 rounded text-slate-500 hover:text-blue-600 dark:text-slate-500 dark:hover:text-blue-400 mr-1"
+                                            title="Rename">
+                                            <span class="material-symbols-rounded text-[14px]"
+                                                style="font-variation-settings: 'FILL' 1">edit</span>
+                                        </button>
                                         <button @click.stop="deleteNote(note.id)"
                                             class="p-0.5 hover:bg-slate-200 dark:hover:bg-slate-600 rounded text-slate-500 hover:text-red-600 dark:text-slate-500 dark:hover:text-red-400"
                                             title="Delete">
@@ -413,6 +420,12 @@
                                         <span class="material-symbols-rounded text-[16px]"
                                             style="font-variation-settings: 'FILL' 1">add</span>
                                     </button>
+                                    <button @click.stop="startRename(folder, 'folder')"
+                                        class="text-slate-500 hover:text-blue-600 dark:text-slate-400 dark:hover:text-blue-400 mr-1"
+                                        title="Rename Folder">
+                                        <span class="material-symbols-rounded text-[16px]"
+                                            style="font-variation-settings: 'FILL' 1">edit</span>
+                                    </button>
                                     <button @click.stop="deleteFolder(folder.id)"
                                         class="text-slate-500 hover:text-red-600 dark:text-slate-400 dark:hover:text-red-400"
                                         title="Delete Folder">
@@ -471,9 +484,16 @@
                                             </span>
                                         </div>
 
+
                                         <!-- Hover Actions -->
                                         <div
                                             class="flex items-center opacity-0 group-hover:opacity-100 transition-opacity ml-2">
+                                            <button @click.stop="startRename(note, 'note')"
+                                                class="p-0.5 hover:bg-slate-200 dark:hover:bg-slate-600 rounded text-slate-500 hover:text-blue-600 dark:text-slate-500 dark:hover:text-blue-400 mr-1"
+                                                title="Rename">
+                                                <span class="material-symbols-rounded text-[14px]"
+                                                    style="font-variation-settings: 'FILL' 1">edit</span>
+                                            </button>
                                             <button @click.stop="deleteNote(note.id)"
                                                 class="p-0.5 hover:bg-slate-200 dark:hover:bg-slate-600 rounded text-slate-500 hover:text-red-600 dark:text-slate-500 dark:hover:text-red-400"
                                                 title="Delete">
