--- a/static/index.html
+++ b/static/index.html
@@ -194,8 +194,12 @@
                     <!-- Data Management -->
                     <div>
                         <h4
-                            class="text-[10px] font-bold text-slate-400 dark:text-slate-500 uppercase tracking-widest mb-3">
-                            Backup & Restore</h4>
+                            class="text-[10px] font-bold text-slate-400 dark:text-slate-500 uppercase tracking-widest mb-3 flex items-center justify-between">
+                            Backup & Restore
+                            <span v-if="dbType"
+                                class="px-1.5 py-0.5 rounded bg-slate-100 dark:bg-slate-700 font-mono text-slate-500 dark:text-slate-400">{{
+                                dbType }}</span>
+                        </h4>
                         <div class="flex gap-2">
                             <button @click="backupData"
                                 class="flex-1 py-2 text-xs font-semibold text-slate-600 dark:text-slate-300 bg-slate-50 dark:bg-slate-700/50 hover:bg-slate-100 dark:hover:bg-slate-700 rounded-lg transition-colors border border-slate-200 dark:border-slate-600 flex items-center justify-center gap-1.5">
